[gd_scene load_steps=15 format=3 uid="uid://b3u3nrek114bl"]

[ext_resource type="Theme" uid="uid://gee0nt5mhjku" path="res://game/visuals/theme/toxic_yuri_vn_theme.tres" id="1_6wjhx"]
[ext_resource type="Script" uid="uid://dnbopb4ksr64p" path="res://game/stages/main_menu_stage.gd" id="1_wqqgh"]
[ext_resource type="Theme" uid="uid://drk5fhsdjoewf" path="res://game/visuals/theme/diisis_theme.tres" id="3_fjoxk"]
[ext_resource type="Material" uid="uid://3ubtbqs0wka4" path="res://game/visuals/shaders/quantize_material_param.tres" id="3_o4dm7"]
[ext_resource type="Texture2D" uid="uid://cragbc6muwrx1" path="res://game/backgrounds/main_menu.png" id="4_o4dm7"]
[ext_resource type="Texture2D" uid="uid://dqpgdhw6iar2i" path="res://game/visuals/logo2-4.png" id="6_o4dm7"]
[ext_resource type="Shader" uid="uid://dh14tp6f61jea" path="res://game/stages/sps_dither.gdshader" id="7_o4dm7"]
[ext_resource type="Material" uid="uid://daron3uhruccc" path="res://game/visuals/dither_correction_material.tres" id="7_qg14a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o4dm7"]
shader = ExtResource("7_o4dm7")
shader_parameter/resolution_downsampling = 5.9
shader_parameter/bit_depth = 14.0

[sub_resource type="Animation" id="Animation_qg14a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-141, -300)]
}

[sub_resource type="Animation" id="Animation_o4dm7"]
resource_name = "hover"
length = 24.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.03228, 12.0333, 18.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.148353, 0.0, -0.148353]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8.0649, 15.9659),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-141, -300), Vector2(-141, -312), Vector2(-141, -278)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6e4ii"]
_data = {
&"RESET": SubResource("Animation_qg14a"),
&"hover": SubResource("Animation_o4dm7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6e4ii"]
shader = ExtResource("7_o4dm7")
shader_parameter/resolution_downsampling = 2.0
shader_parameter/bit_depth = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qg14a"]
shader = ExtResource("7_o4dm7")
shader_parameter/resolution_downsampling = 1.1
shader_parameter/bit_depth = 10.0

[node name="MainMenuStage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6wjhx")
script = ExtResource("1_wqqgh")
menu_music = "main_menu"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = ExtResource("3_o4dm7")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1000, 750)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = -2

[node name="Background" type="Sprite2D" parent="SubViewportContainer/SubViewport/CanvasLayer"]
unique_name_in_owner = true
texture = ExtResource("4_o4dm7")
centered = false
offset = Vector2(-375, 0)

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport/CanvasLayer"]
material = SubResource("ShaderMaterial_o4dm7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/CanvasLayer"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_6e4ii")
}

[node name="Logo" type="Control" parent="SubViewportContainer/SubViewport/CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1141.0
offset_top = -675.0
offset_right = 859.0
offset_bottom = 1725.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.568055, 0.568055)
pivot_offset = Vector2(656, 656)

[node name="TextureRect" type="TextureRect" parent="SubViewportContainer/SubViewport/CanvasLayer/Logo"]
layout_mode = 0
offset_left = -11.1889
offset_top = -74.5631
offset_right = 1988.81
offset_bottom = 2325.44
scale = Vector2(0.742899, 0.742899)
texture = ExtResource("6_o4dm7")

[node name="CanvasLayer2" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = 3

[node name="MarginContainer" type="MarginContainer" parent="SubViewportContainer/SubViewport/CanvasLayer2"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -335.5
offset_top = -221.0
offset_right = 335.5
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_6wjhx")
theme_override_constants/margin_left = 7

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "New Game"
alignment = 2

[node name="LoadButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Load"
alignment = 2

[node name="EpilogueButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Epilogue"
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveContainer" type="MarginContainer" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 10

[node name="Vbox" type="HBoxContainer" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/VBoxContainer/SaveContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SaveSlotLabel" type="Label" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/VBoxContainer/SaveContainer/Vbox"]
layout_mode = 2
text = "Save Slot: 1"

[node name="SaveSlotButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/VBoxContainer/SaveContainer/Vbox"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
text = "Change"

[node name="HBoxContainer2" type="VBoxContainer" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="OptionsButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
focus_mode = 0
text = "Options"

[node name="CWButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
focus_mode = 0
text = "Content Warning"

[node name="CreditsButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
focus_mode = 0
text = "Credits"

[node name="QuitButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="CorrectionLayer" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport/CorrectionLayer"]
material = ExtResource("7_qg14a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DitherLayer2" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = 13

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport/DitherLayer2"]
material = SubResource("ShaderMaterial_6e4ii")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenLayer" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = 13

[node name="ScreenContainer" type="Control" parent="SubViewportContainer/SubViewport/ScreenLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer3" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = 20

[node name="UnlockedEpilogueOverlay" type="ColorRect" parent="SubViewportContainer/SubViewport/CanvasLayer3"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_fjoxk")
color = Color(0, 0, 0, 0.635294)

[node name="CenterContainer" type="CenterContainer" parent="SubViewportContainer/SubViewport/CanvasLayer3/UnlockedEpilogueOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/CanvasLayer3/UnlockedEpilogueOverlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="SubViewportContainer/SubViewport/CanvasLayer3/UnlockedEpilogueOverlay/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Epilogue unlocked.[/b][/center]"
fit_content = true

[node name="UnlockedEpilogueButton" type="Button" parent="SubViewportContainer/SubViewport/CanvasLayer3/UnlockedEpilogueOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Got it"

[node name="BlackLayer" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = 7
visible = false

[node name="Black" type="ColorRect" parent="SubViewportContainer/SubViewport/BlackLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DitherLayer" type="CanvasLayer" parent="SubViewportContainer/SubViewport"]
layer = 13

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport/DitherLayer"]
material = SubResource("ShaderMaterial_qg14a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/VBoxContainer/SaveContainer/Vbox/SaveSlotButton" to="." method="_on_save_slot_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2/CWButton" to="." method="_on_cw_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer2/MarginContainer/VBoxContainer/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/CanvasLayer3/UnlockedEpilogueOverlay/CenterContainer/VBoxContainer/UnlockedEpilogueButton" to="." method="_on_unlocked_epilogue_button_pressed"]
